--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
       <div></div>
     </div>
   </div>
-  <div class="glowing-text">REEM</div>
+  <div class="glowing-text">Laven</div>
 </body>
 </html>
